Youtube: updated, mp3 fixed UGotFileCom: premium fixed FileSonic: fixed BingCom: do not use functions that are not available in public
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@12285 ebf7c1c2-ba36-0410-9fe8-c592906822b4